--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/user/_user.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/user/_user.scss
@@ -1282,6 +1282,7 @@
       margin-right: 0.5rem;
       padding-left: 0;
       padding-right: 0;
+      margin-bottom: 5rem;
     }
   }
 }
